# polybot

./: .env.example  .gitignore  Procfile  README.md  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
frontend/: index.html
scripts/: analyze_data.py  cleanup_all_bad_data.py  cleanup_bad_data.py  collect_data.py  debug_api.py  debug_market_times.py  enhanced_collector.py
src/: __init__.py  config.py
src/api/: __init__.py  main.py
src/clients/: __init__.py  polymarket.py
src/models/: __init__.py  database.py
src/monitor/: __init__.py  spread_monitor.py  websocket_client.py
src/storage/: __init__.py  postgres.py
